force-app/main/default/objects/Defect__c/Defect__c.object-meta.xml
<CustomObject>
    <label>不具合</label>
    <nameField>
        <displayFormat>DE-{00000000}</displayFormat>
        <label>不具合番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>