force-app/main/default/objects/Defect__c/fields/AccrualDateTime__c.field-meta.xml
<CustomField>
    <fullName>AccrualDateTime__c</fullName>
    <label>発生日時</label>
    <type>DateTime</type>
</CustomField>