force-app/main/default/objects/Defect__c/fields/Cause__c.field-meta.xml
<CustomField>
    <fullName>Cause__c</fullName>
    <label>原因（推定でも可）</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>