force-app/main/default/objects/Defect__c/fields/ContactInformation__c.field-meta.xml
<CustomField>
    <fullName>ContactInformation__c</fullName>
    <label>問い合わせ先</label>
    <type>TextArea</type>
</CustomField>