force-app/main/default/objects/Defect__c/fields/CorrespondenceSituation__c.field-meta.xml
<CustomField>
    <fullName>CorrespondenceSituation__c</fullName>
    <label>現地対応状況（処理内容、対策等）</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>