force-app/main/default/objects/Defect__c/fields/CustomerApprovalScope__c.field-meta.xml
<CustomField>
    <fullName>CustomerApprovalScope__c</fullName>
    <label>客先承知者範囲</label>
    <type>TextArea</type>
</CustomField>