force-app/main/default/objects/Defect__c/fields/CustomerImpact__c.field-meta.xml
<CustomField>
    <fullName>CustomerImpact__c</fullName>
    <label>客先／エンドユーザーへの影響</label>
    <type>TextArea</type>
</CustomField>