force-app/main/default/objects/Defect__c/fields/DefectOwnersDivision__c.field-meta.xml
<CustomField>
    <fullName>DefectOwnersDivision__c</fullName>
    <formula>TEXT(Owner:User.DepartmentAndDivision__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>所有者の本支社/製作所</label>
    <type>Text</type>
</CustomField>