force-app/main/default/objects/Defect__c/fields/DefectTitle__c.field-meta.xml
<CustomField>
    <fullName>DefectTitle__c</fullName>
    <label>不具合名</label>
    <type>TextArea</type>
</CustomField>