force-app/main/default/objects/Defect__c/fields/DeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>DeliveryDate__c</fullName>
    <label>納入年月</label>
    <type>Date</type>
</CustomField>