force-app/main/default/objects/Defect__c/fields/DetectDetail__c.field-meta.xml
<CustomField>
    <fullName>DetectDetail__c</fullName>
    <label>不具合内容</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>