force-app/main/default/objects/Defect__c/fields/Evidence__c.field-meta.xml
<CustomField>
    <fullName>Evidence__c</fullName>
    <label>客先心証</label>
    <type>TextArea</type>
</CustomField>