force-app/main/default/objects/Defect__c/fields/FactoryPlan__c.field-meta.xml
<CustomField>
    <fullName>FactoryPlan__c</fullName>
    <label>製作所の今後の対応予定</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>