force-app/main/default/objects/Defect__c/fields/HandlingLevel__c.field-meta.xml
<CustomField>
    <fullName>HandlingLevel__c</fullName>
    <label>製作所の不具合取扱いレベル</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>重大不具合</fullName>
            </value>
            <value>
                <fullName>品質報告</fullName>
            </value>
            <value>
                <fullName>未定</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>