force-app/main/default/objects/Defect__c/fields/HumanDamage__c.field-meta.xml
<CustomField>
    <fullName>HumanDamage__c</fullName>
    <description>有無、程度と処置</description>
    <label>人的被害</label>
    <type>TextArea</type>
</CustomField>