force-app/main/default/objects/Defect__c/fields/MailTo__c.field-meta.xml
<CustomField>
    <fullName>MailTo__c</fullName>
    <label>宛先</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ＧＭ</fullName>
            </value>
            <value>
                <fullName>社環計Ｂ</fullName>
            </value>
            <value>
                <fullName>品証ＧＲ</fullName>
            </value>
            <value>
                <fullName>ＢＵ推進Ｂ</fullName>
            </value>
            <value>
                <fullName>品証・鈴木ＭＳ</fullName>
            </value>
            <value>
                <fullName>社環計・業務Ｋ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>