force-app/main/default/objects/Defect__c/fields/MassMedia__c.field-meta.xml
<CustomField>
    <fullName>MassMedia__c</fullName>
    <description>新聞・ＴＶ・インターネット掲示の有無</description>
    <label>マスコミ報道</label>
    <type>TextArea</type>
</CustomField>