force-app/main/default/objects/Defect__c/fields/OccurredPlace__c.field-meta.xml
<CustomField>
    <fullName>OccurredPlace__c</fullName>
    <label>発生場所</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>