force-app/main/default/objects/Defect__c/fields/Opp__c.field-meta.xml
<CustomField>
    <fullName>Opp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>案件</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>不具合</relationshipLabel>
    <relationshipName>Opps</relationshipName>
    <type>Lookup</type>
</CustomField>