force-app/main/default/objects/Defect__c/fields/PlanforCustomer__c.field-meta.xml
<CustomField>
    <fullName>PlanforCustomer__c</fullName>
    <label>客先への対応予定／謝罪予定者</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>