force-app/main/default/objects/Defect__c/fields/PublicInfluence__c.field-meta.xml
<CustomField>
    <fullName>PublicInfluence__c</fullName>
    <description>警察、消防署関与の有無</description>
    <label>公的影響度</label>
    <type>TextArea</type>
</CustomField>