force-app/main/default/objects/Defect__c/fields/Recall__c.field-meta.xml
<CustomField>
    <fullName>Recall__c</fullName>
    <defaultValue>false</defaultValue>
    <label>リコール有無</label>
    <type>Checkbox</type>
</CustomField>