force-app/main/default/objects/Defect__c/fields/RecoveryExpectancy__c.field-meta.xml
<CustomField>
    <fullName>RecoveryExpectancy__c</fullName>
    <label>復旧見込み</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>