force-app/main/default/objects/Defect__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Opp__c</columns>
    <columns>Account__c</columns>
    <columns>Prod__c</columns>
    <columns>OccurredPlace__c</columns>
    <columns>AccrualDateTime__c</columns>
    <columns>Status__c</columns>
    <columns>HandlingLevel__c</columns>
    <columns>DeliveryDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>