force-app/main/default/objects/Defect__c/listViews/X21.listView-meta.xml
<ListView>
    <fullName>X21</fullName>
    <columns>NAME</columns>
    <columns>Opp__c</columns>
    <columns>Account__c</columns>
    <columns>Prod__c</columns>
    <columns>OccurredPlace__c</columns>
    <columns>AccrualDateTime__c</columns>
    <columns>Status__c</columns>
    <columns>HandlingLevel__c</columns>
    <columns>DeliveryDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>HandlingLevel__c</field>
        <operation>equals</operation>
        <value>品質報告</value>
    </filters>
    <label>21.製作所の不具合取扱いレベルが品質報告のもの</label>
</ListView>