force-app/main/default/objects/Defect__c/listViews/X22.listView-meta.xml
<ListView>
    <fullName>X22</fullName>
    <columns>NAME</columns>
    <columns>Opp__c</columns>
    <columns>Account__c</columns>
    <columns>Prod__c</columns>
    <columns>OccurredPlace__c</columns>
    <columns>AccrualDateTime__c</columns>
    <columns>Status__c</columns>
    <columns>HandlingLevel__c</columns>
    <columns>DeliveryDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>HandlingLevel__c</field>
        <operation>equals</operation>
        <value>未定</value>
    </filters>
    <label>22.製作所の不具合取扱いレベルが未定のもの</label>
</ListView>