force-app/main/default/objects/Defect__c/listViews/X40Defect.listView-meta.xml
<ListView>
    <fullName>X40Defect</fullName>
    <columns>NAME</columns>
    <columns>Opp__c</columns>
    <columns>Account__c</columns>
    <columns>Prod__c</columns>
    <columns>OccurredPlace__c</columns>
    <columns>AccrualDateTime__c</columns>
    <columns>Status__c</columns>
    <columns>HandlingLevel__c</columns>
    <columns>DeliveryDate__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DefectOwnersDivision__c</field>
        <operation>equals</operation>
        <value>01_社会環境事業部</value>
    </filters>
    <label>40.本社の不具合</label>
</ListView>